Upgrade to JDK11.